example/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - port: 5000
