example/manifest/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  labels:
    app: app
spec:
  tls:
  - hosts:
    - vk-felix.iac.st-corp.ru
    secretName: app-tls
  rules:
    - host: vk-felix.iac.st-corp.ru
      http:
        paths:
        - path: /*
          backend:
            serviceName: app
            servicePort: 80
